change build system to automake

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
 
 script:
   - .travis/unit-test.sh
-  - functional_tests/test.sh ./bionitio-c
+  - functional_tests/test.sh ./src/bionitio-c
