--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
   - .travis/install-dependencies.sh 
 
 script:
+  - ./functional_tests/bionitio-test.sh -p bionitio-c -d functional_tests/test_data
   - .travis/unit-test.sh
-  - functional_tests/test.sh ./src/bionitio-c
