--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,9 @@
-bin_PROGRAMS = bionitio-c
+bin_PROGRAMS = bionitio
 check_PROGRAMS = bionitio-test
 TESTS = bionitio-test
-bionitio_c_SOURCES = bionitio.c fasta.c log.c
-bionitio_c_LDADD = -lm -lz
-bionitio_c_CFLAGS = -Wall -m64 -std=gnu99 -pedantic
+bionitio_SOURCES = bionitio.c fasta.c log.c
+bionitio_LDADD = -lm -lz
+bionitio_CFLAGS = -Wall -m64 -std=gnu99 -pedantic
 bionitio_test_SOURCES = test.c fasta.c log.c
 bionitio_test_LDADD = -lm -lz
 bionitio_test_CFLAGS = -Wall -m64 -std=gnu99 -pedantic
