--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,15 @@ sudo: true
 dist: xenial
 services:
   - docker
-language: c 
+language: python
+python:
+  - "3.4"
 
 before_install:
+  - pip3 install cwltool
   - docker build -t bionitio-c .
 
 script:
   - docker run --entrypoint /bionitio/.travis/unit-test.sh bionitio-c
   - docker run --entrypoint /bionitio/functional_tests/bionitio-test.sh bionitio-c -p bionitio -d /bionitio/functional_tests/test_data -v
+  - cwltool bionitio.cwl --fasta_file functional_tests/test_data/two_sequence.fasta
