--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ python:
 
 before_install:
   - pip3 install cwltool
-  - docker build -t bionitio-c .
+  - docker build -t bionitio .
 
 script:
-  - docker run --entrypoint /bionitio/.travis/unit-test.sh bionitio-c
-  - docker run --entrypoint /bionitio/functional_tests/bionitio-test.sh bionitio-c -p bionitio -d /bionitio/functional_tests/test_data -v
+  - docker run --entrypoint /bionitio/.travis/unit-test.sh bionitio
+  - docker run --entrypoint /bionitio/functional_tests/bionitio-test.sh bionitio -p bionitio -d /bionitio/functional_tests/test_data -v
   - cwltool bionitio.cwl --fasta_file functional_tests/test_data/two_sequence.fasta
